--- a/index.html
+++ b/index.html
@@ -7,49 +7,35 @@
 
   <style>
     :root {
-      /* Cool, clean base – no brown, no beige */
-      --bg: #f5f6fa;
-      --bg-alt: #edf0f7;
+      /* CLEAN COOL PALETTE */
+      --bg: #f5f7fc;              /* very soft blue-white */
+      --bg-alt: #eef1f8;
 
-      --text: #111219;
-      --muted: #5f6470;
+      --text: #0e111a;            /* charcoal/blue-black */
+      --muted: #5d6371;           /* muted cool grey */
 
-      /* Ember accent, but used lightly */
-      --accent: #e4572e;        /* ember */
-      --accent-soft: #ff9b7a;   /* softer ember */
+      /* Midnight indigo + amethyst accents */
+      --accent: #2f3b82;          /* indigo line + left border */
+      --accent-soft: #7d6cff;     /* amethyst micro-detail */
 
-      --border-subtle: rgba(9, 12, 22, 0.12);
+      --border-subtle: rgba(10, 14, 28, 0.12);
       --max-width: 1040px;
     }
 
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; }
 
-    html,
     body {
       margin: 0;
       padding: 0;
-    }
-
-    body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-        sans-serif;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       background: var(--bg);
       color: var(--text);
       -webkit-font-smoothing: antialiased;
       text-rendering: optimizeLegibility;
     }
 
-    .page {
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
-
-    main {
-      flex: 1;
-    }
+    .page { min-height: 100vh; display: flex; flex-direction: column; }
+    main { flex: 1; }
 
     .shell {
       max-width: var(--max-width);
@@ -58,13 +44,10 @@
     }
 
     @media (min-width: 900px) {
-      .shell {
-        padding: 28px 32px 56px;
-      }
+      .shell { padding: 28px 32px 56px; }
     }
 
-    /* Header */
-
+    /* HEADER */
     .site-header {
       display: flex;
       flex-direction: column;
@@ -87,133 +70,70 @@
       color: var(--muted);
     }
 
-    /* HERO – light, airy, color at the edges */
+    /* HERO — CLEAN, INDIGO, BREATHABLE */
 
     .hero-shell {
-      position: relative;
-      margin: 40px 0 44px;
-      padding: 60px 0 64px;
+      margin: 48px 0 52px;
+      padding: 48px 0 52px;
       border-bottom: 1px solid var(--border-subtle);
-      overflow: visible;
     }
 
     @media (min-width: 900px) {
       .hero-shell {
-        margin: 56px 0 56px;
-        padding: 72px 0 76px;
+        margin: 64px 0 64px;
+        padding: 60px 0 64px;
       }
     }
 
-    /* Horizon glow: color lives at the very top, fades into neutral */
-    .hero-shell::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 100vw;
-      height: 52%;
-      background:
-        radial-gradient(circle at 12% 0,
-          rgba(228, 87, 46, 0.35),
-          transparent 55%)
-        ,
-        linear-gradient(
-          180deg,
-          rgba(9, 12, 22, 0.92),
-          rgba(9, 12, 22, 0.55),
-          transparent 80%
-        );
-      opacity: 0.95;
-      z-index: 0;
-      pointer-events: none;
-    }
-
-    .hero {
-      position: relative;
-      z-index: 1;
-      text-align: center;
-    }
-
     .hero-inner {
-      max-width: 40rem;
+      max-width: 42rem;
       margin: 0 auto;
-      padding: 0 8px;
-      color: #f9fafb;
+      padding-left: 22px;
+      border-left: 3px solid var(--accent); /* clean indigo vertical bar */
     }
 
     .hero-kicker {
       font-size: 0.78rem;
       letter-spacing: 0.22em;
       text-transform: uppercase;
-      color: rgba(255, 155, 122, 0.9);
-      margin: 0 0 16px;
+      color: var(--muted);
+      margin: 0 0 14px;
     }
 
     .hero-title {
-      font-size: 2rem;
-      line-height: 1.25;
+      font-size: 2.2rem;
+      line-height: 1.28;
       font-weight: 600;
       margin: 0 0 20px;
+      color: #0d0f17;
     }
 
     @media (min-width: 900px) {
-      .hero-title {
-        font-size: 2.4rem;
-      }
-    }
-
-    .hero-title-line {
-      display: block;
-    }
-
-    .hero-title-em {
-      display: inline-block;
-      position: relative;
-      padding: 0 0.08em;
-    }
-
-    /* Thin ember underline under second line – not a big slab */
-    .hero-title-em::before {
-      content: "";
-      position: absolute;
-      left: 0;
-      right: 0;
-      bottom: -0.1em;
-      height: 2px;
-      background: linear-gradient(
-        90deg,
-        rgba(228, 87, 46, 0.15),
-        rgba(228, 87, 46, 0.8),
-        rgba(255, 155, 122, 0.4)
-      );
-      border-radius: 999px;
-      z-index: -1;
+      .hero-title { font-size: 2.6rem; }
     }
 
     .hero-subtext {
-      font-size: 0.98rem;
+      font-size: 1rem;
       line-height: 1.7;
       margin: 0;
-      color: rgba(248, 250, 252, 0.9);
+      color: var(--muted);
+      max-width: 34rem;
     }
 
-    .hero-subtext + .hero-subtext {
-      margin-top: 8px;
-    }
+    .hero-subtext + .hero-subtext { margin-top: 8px; }
 
     .hero-actions {
       margin-top: 26px;
       display: flex;
       flex-direction: column;
-      align-items: center;
+      align-items: flex-start;
       gap: 8px;
     }
 
     @media (min-width: 900px) {
       .hero-actions {
         flex-direction: row;
-        justify-content: center;
+        align-items: center;
         gap: 18px;
       }
     }
@@ -222,12 +142,11 @@
       position: relative;
       display: inline-flex;
       align-items: center;
-      justify-content: center;
       font-size: 0.78rem;
       letter-spacing: 0.2em;
       text-transform: uppercase;
       text-decoration: none;
-      color: #f9fafb;
+      color: var(--text);
       padding-bottom: 4px;
     }
 
@@ -237,25 +156,20 @@
       left: 0;
       right: 0;
       bottom: 0;
-      height: 1px;
-      background: rgba(255, 155, 122, 0.95);
+      height: 2px;
+      background: var(--accent-soft); /* amethyst underline */
+      border-radius: 2px;
     }
 
-    .hero-link:hover,
-    .hero-link:focus-visible {
-      outline: none;
-      transform: translateY(-1px);
-    }
+    .hero-link:hover { transform: translateY(-1px); }
 
     .hero-note {
       font-size: 0.86rem;
-      color: rgba(255, 201, 177, 0.95);
-      max-width: 20rem;
-      text-align: center;
+      color: var(--muted);
+      max-width: 22rem;
     }
 
-    /* Sections – keep them light and breathing */
-
+    /* SECTION BASE */
     .section-shell {
       padding: 32px 0 36px;
       border-bottom: 1px solid var(--border-subtle);
@@ -271,9 +185,7 @@
     }
 
     @media (min-width: 900px) {
-      .section-shell {
-        padding: 40px 0 44px;
-      }
+      .section-shell { padding: 40px 0 44px; }
       .section-shell.alt {
         padding: 32px 32px 36px;
         margin-left: 8%;
@@ -292,7 +204,6 @@
         display: grid;
         grid-template-columns: minmax(0, 0.75fr) minmax(0, 1.7fr);
         column-gap: 56px;
-        align-items: flex-start;
       }
     }
 
@@ -301,7 +212,7 @@
       letter-spacing: 0.16em;
       text-transform: uppercase;
       font-weight: 600;
-      margin: 0 0 10px;
+      margin-bottom: 10px;
     }
 
     .section-intro {
@@ -311,12 +222,9 @@
       color: var(--muted);
     }
 
-    .section-intro + .section-intro {
-      margin-top: 8px;
-    }
+    .section-intro + .section-intro { margin-top: 8px; }
 
-    /* What I Help With */
-
+    /* LIST SECTIONS */
     .support-list {
       list-style: none;
       padding: 0;
@@ -324,13 +232,6 @@
       display: flex;
       flex-direction: column;
       gap: 18px;
-    }
-
-    @media (min-width: 900px) {
-      .support-list {
-        margin-top: 4px;
-        gap: 20px;
-      }
     }
 
     .support-item-title {
@@ -342,50 +243,10 @@
     .support-item-body {
       font-size: 0.96rem;
       line-height: 1.7;
-      margin: 0;
       color: var(--muted);
     }
 
-    /* How Working Together Feels */
-
-    .feels-body {
-      font-size: 0.96rem;
-      line-height: 1.7;
-      margin: 0 0 12px;
-      color: var(--text);
-    }
-
-    .feels-body:last-of-type {
-      margin-bottom: 0;
-    }
-
-    /* Fit / Not Fit */
-
-    .fit-block {
-      margin-top: 8px;
-    }
-
-    .fit-label {
-      font-size: 0.86rem;
-      letter-spacing: 0.16em;
-      text-transform: uppercase;
-      color: var(--muted);
-      margin: 0 0 4px;
-    }
-
-    .fit-body {
-      font-size: 0.96rem;
-      line-height: 1.7;
-      margin: 0;
-      color: var(--text);
-    }
-
-    .fit-block + .fit-block {
-      margin-top: 16px;
-    }
-
-    /* Footer */
-
+    /* FOOTER */
     .site-footer {
       padding: 18px 18px 26px;
       font-size: 0.8rem;
@@ -395,14 +256,8 @@
     .site-footer-inner {
       max-width: var(--max-width);
       margin: 0 auto;
-      border-top: 1px solid rgba(9, 12, 22, 0.08);
+      border-top: 1px solid rgba(10, 14, 28, 0.08);
       padding-top: 10px;
-    }
-
-    @media (min-width: 900px) {
-      .site-footer {
-        padding: 22px 32px 32px;
-      }
     }
   </style>
 </head>
@@ -422,12 +277,8 @@
               <p class="hero-kicker">FOR WHEN “IT SHOULDN’T BE THIS HARD”</p>
 
               <h1 class="hero-title">
-                <span class="hero-title-line">
-                  Making sense of how your business operates
-                </span>
-                <span class="hero-title-line hero-title-em">
-                  and creating systems that support your work.
-                </span>
+                Making sense of how your business operates<br>
+                and creating systems that support your work.
               </h1>
 
               <p class="hero-subtext">
@@ -459,8 +310,7 @@
               <h2 class="section-title">WHAT I HELP WITH</h2>
               <p class="section-intro">
                 Most people reach out because something in the workflow isn’t adding up — Shopify shows one thing,
-                the books show another, or the day-to-day process feels heavier than it should. It’s not chaos,
-                it’s just work that isn’t flowing the way it needs to.
+                the books show another, or the day-to-day process feels heavier than it should.
               </p>
               <p class="section-intro">
                 Here’s where I usually step in:
@@ -472,22 +322,21 @@
                 <li>
                   <h3 class="support-item-title">Shopify that stays current</h3>
                   <p class="support-item-body">
-                    Products, collections, settings, and daily updates aligned with what’s happening right now —
-                    accurate, consistent, and easy to maintain.
+                    Products, collections, settings, and daily updates aligned with what’s happening right now.
                   </p>
                 </li>
+
                 <li>
                   <h3 class="support-item-title">Numbers that reflect the same reality</h3>
                   <p class="support-item-body">
-                    Payouts, refunds, discounts, fees, and deposits all lining up so the financial side and Shopify
-                    side match without extra work or second-guessing.
+                    Payouts, refunds, discounts, fees, and deposits all lining up without second-guessing.
                   </p>
                 </li>
+
                 <li>
                   <h3 class="support-item-title">Operational issues that need a steady hand</h3>
                   <p class="support-item-body">
-                    The recurring glitches — mismatched data, duplicate behavior, processes that keep slowing things
-                    down. I sort through what’s happening and get it running the way it should.
+                    The recurring glitches — mismatched data, duplicate behavior, processes slowing things down.
                   </p>
                 </li>
               </ul>
@@ -495,58 +344,6 @@
           </div>
         </section>
 
-        <!-- HOW WORKING TOGETHER FEELS -->
-        <section class="section-shell">
-          <div class="section-grid">
-            <div>
-              <h2 class="section-title">HOW WORKING TOGETHER FEELS</h2>
-            </div>
-            <div>
-              <p class="feels-body">
-                You tell me what’s happening — the parts that feel off, the areas you keep circling, the things that
-                aren’t matching what you expect. It can be brief. It doesn’t need to be organized.
-              </p>
-              <p class="feels-body">
-                I review the setup you already have: your Shopify configuration, your financial flow, how updates are
-                managed, and where the inconsistencies are showing up. The goal is to understand the system as it is,
-                so we can see what’s solid, what needs tightening, and what needs a fresh start.
-              </p>
-              <p class="feels-body">
-                From there, we make practical changes that hold — cleaning up the areas that create extra work,
-                tightening the parts that drift, and getting the workflow to operate the way it should. It’s steady,
-                detailed work that makes the day-to-day feel easier.
-              </p>
-            </div>
-          </div>
-        </section>
-
-        <!-- FIT / NOT FIT -->
-        <section class="section-shell alt">
-          <div class="section-grid">
-            <div>
-              <h2 class="section-title">FIT / NOT FIT</h2>
-            </div>
-            <div>
-              <div class="fit-block">
-                <p class="fit-label">A good fit:</p>
-                <p class="fit-body">
-                  You have an active business and the core operations are established, but Shopify, bookkeeping,
-                  and daily workflows need to be aligned so everything reflects the same reality. You want clear,
-                  consistent operations supported by someone who understands the details without adding complexity.
-                </p>
-              </div>
-
-              <div class="fit-block">
-                <p class="fit-label">Not a fit:</p>
-                <p class="fit-body">
-                  This isn’t the right match if you need a custom Shopify theme built from the ground up, if the
-                  business requires urgent intervention, or if you’re looking for a full team or agency structure.
-                  My work is steady, detailed operational support — not surface-level shortcuts or full-scale rebuilds.
-                </p>
-              </div>
-            </div>
-          </div>
-        </section>
       </main>
     </div>
 
