--- a/index.html
+++ b/index.html
@@ -1,152 +1,573 @@
-/* -------------------------------------------------- */
-/* HERO – Graphite + Moonlight + Electric Blue */
-/* -------------------------------------------------- */
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Suzi Neves – Shopify · Bookkeeping · Operations</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-.hero-shell {
-  margin-top: 48px;
-  padding: 48px 0 52px;
-  border-bottom: 1px solid var(--border-subtle);
-  position: relative;
-  z-index: 1;
+  <style>
+    :root {
+      /* Cool, atmospheric base */
+      --bg: #f5f7fb;           /* moonlight */
+      --bg-soft: #edf1fb;
 
-  /* Atmospheric graphite haze */
-  background:
-    radial-gradient(circle at 20% 0%,
-      rgba(100, 116, 139, 0.18),
-      transparent 55%),
-    radial-gradient(circle at 100% 20%,
-      rgba(51, 65, 85, 0.22),
-      transparent 60%),
-    linear-gradient(180deg,
-      #f4f5fb 0%,
-      #f4f5fb 30%,
-      #f4f5fb 100%);
-}
+      --text: #0b1020;         /* graphite */
+      --muted: #5f6475;        /* cool muted */
 
-@media (min-width: 900px) {
-  .hero-shell {
-    margin-top: 64px;
-    padding: 60px 0 64px;
-  }
-}
+      --accent: #2563eb;       /* electric blue */
+      --accent-soft: #38bdf8;  /* softer blue highlight */
 
-.hero {
-  display: flex;
-  flex-direction: column;
-  gap: 26px;
-}
+      --border-subtle: rgba(11, 16, 32, 0.14);
+      --max-width: 1040px;
+    }
 
-@media (min-width: 900px) {
-  .hero {
-    display: grid;
-    grid-template-columns: minmax(0, 1.3fr) minmax(0, 0.9fr);
-    column-gap: 72px;
-    align-items: flex-start;
-  }
-}
+    * {
+      box-sizing: border-box;
+    }
 
-.hero-main {
-  padding-left: 26px;
-  border-left: 2px solid #2563eb; /* Electric blue pop */
-}
+    html,
+    body {
+      margin: 0;
+      padding: 0;
+    }
 
-.hero-title {
-  font-size: 2.2rem;
-  line-height: 1.28;
-  font-weight: 600;
-  margin: 0 0 18px;
-  color: #0b1020;
-}
+    body {
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        sans-serif;
+      color: var(--text);
+      -webkit-font-smoothing: antialiased;
+      text-rendering: optimizeLegibility;
+      background:
+        radial-gradient(circle at 0 0,
+          rgba(37, 99, 235, 0.18),
+          transparent 55%),
+        radial-gradient(circle at 100% 0,
+          rgba(56, 189, 248, 0.16),
+          transparent 60%),
+        linear-gradient(180deg, #f5f7fb 0%, #f5f7fb 40%, #f5f7fb 100%);
+    }
 
-@media (min-width: 900px) {
-  .hero-title {
-    font-size: 2.6rem;
-  }
-}
+    .page {
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
 
-.hero-subtext {
-  font-size: 1rem;
-  line-height: 1.68;
-  margin: 0;
-  color: var(--muted);
-  max-width: 36rem;
-}
+    main {
+      flex: 1;
+    }
 
-.hero-subtext + .hero-subtext {
-  margin-top: 6px;
-}
+    .shell {
+      max-width: var(--max-width);
+      margin: 0 auto;
+      padding: 20px 18px 40px;
+      position: relative;
+    }
 
-.hero-actions {
-  margin-top: 22px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 6px;
-}
+    @media (min-width: 900px) {
+      .shell {
+        padding: 28px 32px 56px;
+      }
+    }
 
-@media (min-width: 900px) {
-  .hero-actions {
-    flex-direction: row;
-    align-items: center;
-    gap: 16px;
-  }
-}
+    /* subtle vertical rail tying page together */
+    .shell::before {
+      content: "";
+      position: absolute;
+      top: 40px;
+      bottom: 40px;
+      left: 10px;
+      width: 1px;
+      background: linear-gradient(
+        180deg,
+        rgba(37, 99, 235, 0.0),
+        rgba(37, 99, 235, 0.55),
+        rgba(56, 189, 248, 0.0)
+      );
+      pointer-events: none;
+    }
 
-.hero-button {
-  position: relative;
-  display: inline-flex;
-  align-items: center;
-  padding: 0;
-  background: none;
-  border: none;
-  font: inherit;
-  font-size: 0.78rem;
-  letter-spacing: 0.2em;
-  text-transform: uppercase;
-  color: var(--text);
-  text-decoration: none;
-  padding-bottom: 4px;
-}
+    @media (min-width: 900px) {
+      .shell::before {
+        left: 18px;
+      }
+    }
 
-.hero-button::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  height: 2px;
-  background: #2563eb; /* Electric blue underline */
-  border-radius: 999px;
-}
+    /* Header */
 
-.hero-button:hover {
-  transform: translateY(-1px);
-}
+    .site-header {
+      display: flex;
+      flex-direction: column;
+      gap: 4px;
+      border-bottom: 1px solid var(--border-subtle);
+      padding-bottom: 10px;
+      position: relative;
+      z-index: 1;
+    }
 
-.hero-note {
-  font-size: 0.86rem;
-  color: var(--muted);
-  max-width: 22rem;
-}
+    .site-title {
+      font-size: 0.9rem;
+      letter-spacing: 0.14em;
+      text-transform: uppercase;
+      font-weight: 600;
+    }
 
-/* Hero side column */
-.hero-side {
-  font-size: 0.92rem;
-  line-height: 1.68;
-  color: var(--muted);
-  padding-top: 4px;
-  max-width: 22rem;
-}
+    .site-tagline {
+      font-size: 0.78rem;
+      letter-spacing: 0.18em;
+      text-transform: uppercase;
+      color: var(--muted);
+    }
 
-.hero-side-label {
-  font-size: 0.78rem;
-  letter-spacing: 0.18em;
-  text-transform: uppercase;
-  margin-bottom: 8px;
-  color: #2563eb;
-}
+    /* Generic section wrapper – no boxes, just rhythm */
 
-.hero-side-block {
-  padding-top: 10px;
-  border-top: 1px solid rgba(37, 99, 235, 0.3);
-}
+    .section-shell {
+      padding: 32px 0 36px;
+      border-bottom: 1px solid var(--border-subtle);
+      position: relative;
+      z-index: 1;
+    }
+
+    @media (min-width: 900px) {
+      .section-shell {
+        padding: 40px 0 44px;
+      }
+    }
+
+    .section-grid {
+      display: flex;
+      flex-direction: column;
+      gap: 18px;
+    }
+
+    @media (min-width: 900px) {
+      .section-grid {
+        display: grid;
+        grid-template-columns: minmax(0, 0.75fr) minmax(0, 1.7fr);
+        column-gap: 56px;
+        align-items: flex-start;
+      }
+    }
+
+    .section-title {
+      font-size: 0.96rem;
+      letter-spacing: 0.16em;
+      text-transform: uppercase;
+      font-weight: 600;
+      margin: 0 0 10px;
+    }
+
+    .section-intro {
+      font-size: 0.96rem;
+      line-height: 1.7;
+      margin: 0;
+      color: var(--muted);
+    }
+
+    .section-intro + .section-intro {
+      margin-top: 8px;
+    }
+
+    /* -------------------------------------------------- */
+    /* HERO – Graphite + Moonlight + Electric Blue       */
+    /* -------------------------------------------------- */
+
+    .hero-shell {
+      margin-top: 40px;
+      padding: 40px 0 44px;
+      border-bottom: 1px solid var(--border-subtle);
+      position: relative;
+      z-index: 1;
+      background:
+        radial-gradient(circle at 20% 0%,
+          rgba(100, 116, 139, 0.18),
+          transparent 55%),
+        radial-gradient(circle at 100% 20%,
+          rgba(51, 65, 85, 0.22),
+          transparent 60%),
+        linear-gradient(180deg,
+          #f5f7fb 0%,
+          #f5f7fb 30%,
+          #f5f7fb 100%);
+    }
+
+    @media (min-width: 900px) {
+      .hero-shell {
+        margin-top: 52px;
+        padding: 48px 0 52px;
+      }
+    }
+
+    .hero {
+      display: flex;
+      flex-direction: column;
+      gap: 24px;
+    }
+
+    @media (min-width: 900px) {
+      .hero {
+        display: grid;
+        grid-template-columns: minmax(0, 1.3fr) minmax(0, 0.9fr);
+        column-gap: 72px;
+        align-items: flex-start;
+      }
+    }
+
+    .hero-main {
+      padding-left: 26px;
+      border-left: 2px solid var(--accent);
+    }
+
+    .hero-title {
+      font-size: 2.2rem;
+      line-height: 1.28;
+      font-weight: 600;
+      margin: 0 0 18px;
+      color: #0b1020;
+    }
+
+    @media (min-width: 900px) {
+      .hero-title {
+        font-size: 2.6rem;
+      }
+    }
+
+    .hero-subtext {
+      font-size: 1rem;
+      line-height: 1.7;
+      margin: 0;
+      color: var(--muted);
+      max-width: 36rem;
+    }
+
+    .hero-subtext + .hero-subtext {
+      margin-top: 6px;
+    }
+
+    .hero-actions {
+      margin-top: 22px;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 6px;
+    }
+
+    @media (min-width: 900px) {
+      .hero-actions {
+        flex-direction: row;
+        align-items: center;
+        gap: 16px;
+      }
+    }
+
+    .hero-button {
+      position: relative;
+      display: inline-flex;
+      align-items: center;
+      padding: 0;
+      background: none;
+      border: none;
+      font: inherit;
+      font-size: 0.78rem;
+      letter-spacing: 0.2em;
+      text-transform: uppercase;
+      color: var(--text);
+      text-decoration: none;
+      padding-bottom: 4px;
+    }
+
+    .hero-button::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      height: 2px;
+      background: var(--accent);
+      border-radius: 999px;
+    }
+
+    .hero-button:hover,
+    .hero-button:focus-visible {
+      outline: none;
+      transform: translateY(-1px);
+    }
+
+    .hero-note {
+      font-size: 0.86rem;
+      color: var(--muted);
+      max-width: 22rem;
+    }
+
+    .hero-side {
+      font-size: 0.92rem;
+      line-height: 1.7;
+      color: var(--muted);
+      padding-top: 4px;
+      max-width: 22rem;
+    }
+
+    .hero-side-label {
+      font-size: 0.78rem;
+      letter-spacing: 0.18em;
+      text-transform: uppercase;
+      margin-bottom: 8px;
+      color: var(--accent);
+    }
+
+    .hero-side-block {
+      padding-top: 10px;
+      border-top: 1px solid rgba(37, 99, 235, 0.3);
+    }
+
+    /* What I Help With */
+
+    .support-list {
+      list-style: none;
+      padding: 0;
+      margin: 14px 0 0;
+      display: flex;
+      flex-direction: column;
+      gap: 18px;
+    }
+
+    @media (min-width: 900px) {
+      .support-list {
+        margin-top: 4px;
+        gap: 20px;
+      }
+    }
+
+    .support-item-title {
+      font-size: 0.95rem;
+      font-weight: 600;
+      margin: 0 0 2px;
+    }
+
+    .support-item-body {
+      font-size: 0.96rem;
+      line-height: 1.7;
+      margin: 0;
+      color: var(--muted);
+    }
+
+    /* How Working Together Feels */
+
+    .feels-body {
+      font-size: 0.96rem;
+      line-height: 1.7;
+      margin: 0 0 12px;
+      color: var(--text);
+      max-width: 40rem;
+    }
+
+    .feels-body:last-of-type {
+      margin-bottom: 0;
+    }
+
+    /* Fit / Not Fit */
+
+    .fit-block {
+      margin-top: 8px;
+      max-width: 40rem;
+    }
+
+    .fit-label {
+      font-size: 0.86rem;
+      letter-spacing: 0.16em;
+      text-transform: uppercase;
+      color: var(--muted);
+      margin: 0 0 4px;
+    }
+
+    .fit-body {
+      font-size: 0.96rem;
+      line-height: 1.7;
+      margin: 0;
+      color: var(--text);
+    }
+
+    .fit-block + .fit-block {
+      margin-top: 16px;
+    }
+
+    /* Footer */
+
+    .site-footer {
+      padding: 18px 18px 26px;
+      font-size: 0.8rem;
+      color: var(--muted);
+    }
+
+    .site-footer-inner {
+      max-width: var(--max-width);
+      margin: 0 auto;
+      border-top: 1px solid rgba(11, 16, 32, 0.12);
+      padding-top: 10px;
+    }
+
+    @media (min-width: 900px) {
+      .site-footer {
+        padding: 22px 32px 32px;
+      }
+    }
+  </style>
+</head>
+<body>
+  <div class="page">
+    <div class="shell">
+      <header class="site-header">
+        <div class="site-title">SUZI NEVES</div>
+        <div class="site-tagline">SHOPIFY - BOOKKEEPING - OPERATIONS</div>
+      </header>
+
+      <main>
+        <!-- HERO -->
+        <section class="hero-shell">
+          <div class="hero">
+            <div class="hero-main">
+              <h1 class="hero-title">
+                Making sense of how your business operates and creating systems that support your work.
+              </h1>
+
+              <p class="hero-subtext">
+                The parts of the business that keep tugging at you don’t have to stay heavy.
+              </p>
+              <p class="hero-subtext">
+                I bring clarity to how everything works together so the daily flow feels calmer.
+              </p>
+
+              <div class="hero-actions">
+                <a
+                  class="hero-button"
+                  href="mailto:suzi@radpurpose.com?subject=Shopify%20%C2%B7%20Bookkeeping%20%C2%B7%20Operations"
+                >
+                  REACH OUT —-&gt;
+                </a>
+                <p class="hero-note">
+                  If it’s hard to put into words, that’s okay. Start wherever.
+                </p>
+              </div>
+            </div>
+
+            <aside class="hero-side">
+              <div class="hero-side-label">For when “it shouldn’t be this hard”</div>
+              <div class="hero-side-block">
+                The moment you realize you’re spending too much energy chasing down
+                mismatched numbers, fixing the same issues, or carrying details that
+                should live in a system — that’s usually when people email me.
+              </div>
+            </aside>
+          </div>
+        </section>
+
+        <!-- WHAT I HELP WITH -->
+        <section class="section-shell">
+          <div class="section-grid">
+            <div>
+              <h2 class="section-title">WHAT I HELP WITH</h2>
+              <p class="section-intro">
+                Most people reach out because something in the workflow isn’t adding up — Shopify shows one thing,
+                the books show another, or the day-to-day process feels heavier than it should. It’s not chaos,
+                it’s just work that isn’t flowing the way it needs to.
+              </p>
+              <p class="section-intro">
+                Here’s where I usually step in:
+              </p>
+            </div>
+
+            <div>
+              <ul class="support-list">
+                <li>
+                  <h3 class="support-item-title">Shopify that stays current</h3>
+                  <p class="support-item-body">
+                    Products, collections, settings, and daily updates aligned with what’s happening right now —
+                    accurate, consistent, and easy to maintain.
+                  </p>
+                </li>
+                <li>
+                  <h3 class="support-item-title">Numbers that reflect the same reality</h3>
+                  <p class="support-item-body">
+                    Payouts, refunds, discounts, fees, and deposits all lining up so the financial side and Shopify
+                    side match without extra work or second-guessing.
+                  </p>
+                </li>
+                <li>
+                  <h3 class="support-item-title">Operational issues that need a steady hand</h3>
+                  <p class="support-item-body">
+                    The recurring glitches — mismatched data, duplicate behavior, processes that keep slowing things
+                    down. I sort through what’s happening and get it running the way it should.
+                  </p>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
+
+        <!-- HOW WORKING TOGETHER FEELS -->
+        <section class="section-shell">
+          <div class="section-grid">
+            <div>
+              <h2 class="section-title">HOW WORKING TOGETHER FEELS</h2>
+            </div>
+            <div>
+              <p class="feels-body">
+                You tell me what’s happening — the parts that feel off, the areas you keep circling, the things that
+                aren’t matching what you expect. It can be brief. It doesn’t need to be organized.
+              </p>
+              <p class="feels-body">
+                I review the setup you already have: your Shopify configuration, your financial flow, how updates are
+                managed, and where the inconsistencies are showing up. The goal is to understand the system as it is,
+                so we can see what’s solid, what needs tightening, and what needs a fresh start.
+              </p>
+              <p class="feels-body">
+                From there, we make practical changes that hold — cleaning up the areas that create extra work,
+                tightening the parts that drift, and getting the workflow to operate the way it should. It’s steady,
+                detailed work that makes the day-to-day feel easier.
+              </p>
+            </div>
+          </div>
+        </section>
+
+        <!-- FIT / NOT FIT -->
+        <section class="section-shell">
+          <div class="section-grid">
+            <div>
+              <h2 class="section-title">FIT / NOT FIT</h2>
+            </div>
+            <div>
+              <div class="fit-block">
+                <p class="fit-label">A good fit:</p>
+                <p class="fit-body">
+                  You have an active business and the core operations are established, but Shopify, bookkeeping,
+                  and daily workflows need to be aligned so everything reflects the same reality. You want clear,
+                  consistent operations supported by someone who understands the details without adding complexity.
+                </p>
+              </div>
+
+              <div class="fit-block">
+                <p class="fit-label">Not a fit:</p>
+                <p class="fit-body">
+                  This isn’t the right match if you need a custom Shopify theme built from the ground up, if the
+                  business requires urgent intervention, or if you’re looking for a full team or agency structure.
+                  My work is steady, detailed operational support — not surface-level shortcuts or full-scale rebuilds.
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+      </main>
+    </div>
+
+    <footer class="site-footer">
+      <div class="site-footer-inner">
+        © <span id="year"></span> Suzi Neves
+      </div>
+    </footer>
+  </div>
+
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
+</body>
+</html>
