--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       --ink: #1f1f21;       /* deep charcoal */
       --ink-soft: #4d4d50;
       --accent: #b66349;    /* rust */
-      --accent-soft: #e0b39a;
       --accent-deep: #59312a;
     }
 
@@ -37,7 +36,7 @@
       padding: 2.5rem 5vw 4rem;
     }
 
-    /* big background “movement” shapes – no straight lines */
+    /* big background movement shapes – no straight lines */
     .page::before,
     .page::after {
       content: "";
@@ -95,7 +94,6 @@
       margin-top: 1rem;
     }
 
-    /* generic “flow” container – but not boxed */
     .flow {
       max-width: 52rem;
       margin-left: clamp(1.5rem, 7vw, 5rem);
@@ -111,62 +109,38 @@
     }
 
     .hero::before {
-      /* full-bleed organic image “swoosh” behind hero */
+      /* organic dark swoosh behind hero, no photo */
       content: "";
       position: absolute;
-      inset: -18vh -2vw auto -30vw;
-      background-image: url("IMG_6692.jpeg");
-      background-size: cover;
-      background-position: 60% 32%;
-      filter: grayscale(0.15) contrast(1.1) saturate(1.05) brightness(0.96);
-      opacity: 0.9;
-      transform: rotate(-4deg);
-      transform-origin: center;
+      inset: -10vh -10vw auto -35vw;
+      background:
+        radial-gradient(circle at 10% 10%, rgba(182, 99, 73, 0.9), transparent 70%),
+        radial-gradient(circle at 80% 120%, rgba(30, 20, 19, 0.85), transparent 75%);
       clip-path: path("M 0 140 C 80 30 220 0 360 40 C 540 90 720 60 900 0 L 900 360 C 720 380 570 360 400 320 C 210 275 80 290 0 360 Z");
       z-index: -1;
+      opacity: 0.96;
       mix-blend-mode: multiply;
     }
 
     .hero-layer {
       position: relative;
-      padding-top: 3.25rem;
-    }
-
-    .hero-kicker {
-      font-size: 0.8rem;
-      text-transform: uppercase;
-      letter-spacing: 0.16em;
-      color: rgba(246, 237, 229, 0.9);
-      margin-bottom: 0.9rem;
-      display: inline-flex;
-      align-items: center;
-      gap: 0.35rem;
-      backdrop-filter: blur(2px);
-    }
-
-    .hero-kicker::before {
-      content: "";
-      width: 1.9rem;
-      height: 0.12rem;
-      border-radius: 999px;
-      background: linear-gradient(90deg, rgba(246, 237, 229, 0.4), rgba(246, 237, 229, 0.9));
-      transform: translateY(-1px);
+      padding-top: 3rem;
     }
 
     .hero-title {
       font-size: clamp(1.8rem, 3.1vw, 2.6rem);
       max-width: 28rem;
-      font-weight: 530;
+      font-weight: 600;
       letter-spacing: 0.01em;
-      color: #f8f2ec;
-      text-shadow: 0 8px 24px rgba(0, 0, 0, 0.35);
+      color: #ffffff;
+      text-shadow: 0 2px 8px rgba(0,0,0,0.28);
       margin: 0 0 1.4rem;
     }
 
     .hero-subtext {
       max-width: 26rem;
-      font-size: 0.98rem;
-      color: #fdf6ee;
+      font-size: 1rem;
+      color: #f7f7f7;
       opacity: 0.96;
     }
 
@@ -199,7 +173,7 @@
       content: "";
       position: absolute;
       left: 0;
-      right: 0.9rem;
+      right: 1.1rem;
       bottom: 0.02rem;
       height: 1.1rem;
       background: radial-gradient(circle at 50% 100%, rgba(245, 211, 190, 0.55), transparent 75%);
@@ -229,7 +203,7 @@
       max-width: 16rem;
       font-size: 0.78rem;
       color: #fef6ee;
-      opacity: 0.88;
+      opacity: 0.9;
     }
 
     /* Sections – blended, angled, non-linear */
@@ -238,8 +212,6 @@
       position: relative;
       padding: 3.5rem 0 3.75rem;
     }
-
-    /* angled bleed overlays to avoid straight lines between sections */
 
     .section--what::before,
     .section--how::before,
@@ -335,8 +307,7 @@
       }
 
       .hero::before {
-        inset: -18vh -10vw auto -55vw;
-        clip-path: path("M 0 120 C 90 20 240 0 360 40 C 520 90 660 60 820 10 L 820 320 C 670 340 540 330 390 300 C 230 265 90 280 0 340 Z");
+        inset: -14vh -18vw auto -60vw;
       }
     }
 
@@ -359,12 +330,11 @@
       }
 
       .hero-layer {
-        padding-top: 2.8rem;
+        padding-top: 2.6rem;
       }
 
       .hero::before {
-        inset: -20vh -20vw auto -65vw;
-        opacity: 0.92;
+        inset: -18vh -25vw auto -70vw;
       }
 
       .hero-cta-row {
@@ -388,14 +358,12 @@
   <div class="page">
     <header>
       <div class="header-name">SUZI NEVES</div>
-      <div class="header-line">SHOPIFY · BOOKKEEPING · OPERATIONS</div>
+      <div class="header-line">SHOPIFY - BOOKKEEPING - OPERATIONS</div>
     </header>
 
     <main>
       <section class="hero">
         <div class="flow hero-layer">
-          <div class="hero-kicker">Behind-the-scenes, handled</div>
-
           <h1 class="hero-title">
             Making sense of how your business operates and creating systems that support your work.
           </h1>
